[package]
name = "waline-server"
version = "0.1.0"
edition = "2021"
publish = ["crates-io"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
spring = "0.1.1"
spring-web = "0.1.1"
spring-mail = "0.1.1"
spring-redis = "0.1.1"
spring-sea-orm = { version = "0.1.3", features = ["postgres", "with-web"] }
sea-orm = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.9"
strum = { version = "0.26", features = ["derive"] }
anyhow = "1.0"
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-client-ip = "0.6.0"
axum-valid = "0.19.0"
problemdetails = { version = "0.4", features = ["axum"] }
validator = { version = "0.18", features = ["derive"] }
jsonwebtoken = "8.3"
pem = "3.0"
lazy_static = "1.4"
tracing = "0.1"
rand = "0.8"
askama = "0.12"
itertools = "0.13"