[package]
edition = "2021"
name = "raline-server"
publish = ["crates-io"]
version = "0.1.0"

[dependencies]
ammonia = "4"
anyhow = "1.0"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
axum-client-ip = "0.6.0"
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-valid = "0.20"
base16ct = { version = "0.2", features = ["alloc"] }
comrak = { version = "0.29", features = ["shortcodes"] }
delegate-attr = "0.3"
derive_more = { version = "1.0", features = ["full"] }
instant-akismet = "0.2"
itertools = "0.13"
jsonwebtoken = "8.3"
just-auth = "0.1.4"
lazy_static = "1.5"
md-5 = "0.10"
pem = "3.0"
problemdetails = { version = "0.4", features = ["axum"] }
rand = "0.8"
regex = "1"
reqwest = "0.12"
rust-i18n = "3"
sea-orm = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_with = "3.9"
spring = "0.2"
spring-job = "0.2"
spring-mail = "0.2"
spring-redis = "0.2"
spring-sea-orm = { version = "0.2", features = ["postgres", "with-web"] }
spring-web = "0.2"
spring-opentelemetry = "0.2"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uaparser = "0.6"
validator = { version = "0.18", features = ["derive"] }
xdb = { git = "https://github.com/lionsoul2014/ip2region.git", branch = "master" }
